--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mdb-react-ui-kit": "^7.2.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
     "react-image-lightbox": "^5.1.4",
