--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.2.3",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.2.0",
