--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.2.3",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.2.0",
-    "popper.js": "^1.16.1",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.2.0",
-    "react-image-lightbox": "^5.1.4",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
     "redux": "^5.0.1",
