--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.2.0",
@@ -23,8 +24,8 @@
     "react-circular-progressbar": "^2.1.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-redux": "^9.1.1",
+    "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
     "redux": "^5.0.1",
     "styled-components": "^6.1.8"
