--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "@reduxjs/toolkit": "^2.2.3",
+    "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.2.0",
